Update applications and student pages

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,34 @@
 body {
-	background-color: #aaaaaa;
+	background-image: url('background.jpg');
+	background-repeat: repeat-x repeat-y;
 }
+
+<!-- CSS goes in the document HEAD or added to your external stylesheet -->
+table.gridtable {
+	font-family: verdana,arial,sans-serif;
+	font-size:11px;
+	color:#333333;
+	border-width: 1px;
+	border-color: #666666;
+	border-collapse: collapse;
+	width: 100%;
+	height: 100%;
+}
+table.gridtable th {
+	border-width: 1px;
+	padding: 8px;
+	border-style: solid;
+	border-color: #666666;
+	background-color: #dedede;
+}
+table.gridtable td {
+	border-width: 1px;
+	padding: 8px;
+	border-style: solid;
+	border-color: #666666;
+	background-color: #ffffff;
+}
+
 
 .detail-card, .login-card {
     margin: auto;
