--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url('background.jpg');
+	background-image: url('background.png');
 	background-repeat: repeat-x repeat-y;
 }
 
