--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -36,7 +36,7 @@ body {
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 40px;
   box-sizing: border-box; 
   background-color: white;
   border-radius: 10px;
@@ -51,7 +51,7 @@ body {
 @media (min-width: 400px) {
   .container {
     width: 85%;
-    padding: 20px; }
+    padding: 40px; }
 }
 
 /* For devices larger than 550px */
@@ -398,6 +398,9 @@ hr {
   clear: both; }
 .nobg {
 	background-color: transparent;
+}
+.nopa {
+	padding: 0px;
 }
 
 /* Media Queries
